Fixed clean URLs for pages of form /foo/bar to target /foo/bar.html

--- a/site/content/site.conf
+++ b/site/content/site.conf
@@ -14,7 +14,11 @@ $HTTP["referer"] !~ "^($|http://(.*\.)?taricorp\.net)" {
     url.access-deny = ("")
 }
 
-# Try /foo/bar.html given request for /foo/bar/ and
-# try /foo/bar/ again if nothing at /foo/bar.html
-url.rewrite-repeat = ( "^/(.*)/$" => "/$1.html" )
+# Try /foo/ if /foo doesn't exist
+url.rewrite-repeat-if-not-file = ( "^/(.*[^/])$" => "/$1/" )
+
+# Try /foo.html first rather than /foo/
+url.rewrite-once = ( "^/(.*)/$" => "/$1.html" )
+
+# If no such /foo.html, try /foo/
 url.rewrite-if-not-file = ( "^/(.*).html$" => "/$1/")
