Turned off clean URLS, as lighttpd is difficult to configure for such.

--- a/site/content/site.conf
+++ b/site/content/site.conf
@@ -15,10 +15,10 @@ $HTTP["referer"] !~ "^($|http://(.*\.)?taricorp\.net)" {
 }
 
 # Try /foo/ if /foo doesn't exist
-url.rewrite-repeat-if-not-file = ( "^/(.*[^/])$" => "/$1/" )
-
+#url.rewrite-repeat-if-not-file = ( "^/(.*[^/])$" => "/$1/" )
+#
 # Try /foo.html first rather than /foo/
-url.rewrite-once = ( "^/(.*)/$" => "/$1.html" )
-
-# If no such /foo.html, try /foo/
-url.rewrite-if-not-file = ( "^/(.*).html$" => "/$1/")
+#url.rewrite-once = ( "^/(.*)/$" => "/$1.html" )
+#
+# If no such /foo.html, try /foo/index.html
+#url.rewrite-repeat-if-not-file += ( "^/(.*).html$" => "/$1/index.html")
