Changed hotlink deny line to only do so for images (workaround for some clients setting odd referers when clicking links).

--- a/site/content/site.conf
+++ b/site/content/site.conf
@@ -11,7 +11,7 @@ $HTTP["url"] =~ "^/site.conf$" {
 
 # Deny dirty hotlinkers
 $HTTP["referer"] !~ "^($|http://(.*\.)?taricorp\.net)" {
-    url.access-deny = ("")
+    url.access-deny = (".png", ".jpg", ".bmp")
 }
 
 # Try /foo/ if /foo doesn't exist
