Output posts to the root, not /posts
This is a Hugo config change and addition of explicit slugs for posts
that lack them to ensure they have stable paths.

--- a/config.toml
+++ b/config.toml
@@ -5,3 +5,6 @@ theme = "twentyfourteen"
 PygmentsCodeFences = true
 pygmentsstyle = "default"
 relativeURLs = true
+
+[permalinks]
+posts = "/:year/:slug/"
