Don't include path in beta baseurl
This seems to break links when using relative URLs.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,5 +13,5 @@ variables:
 pages:
   extends: .hugo
   variables:
-    HUGO_BASEURL: https://taricorp.gitlab.io/taricorp.net/
+    HUGO_BASEURL: https://taricorp.gitlab.io/
 
