Avoid a redirect for the license button
i.creativecommons.org redirects to licensebuttons.net

--- a/config.toml
+++ b/config.toml
@@ -36,7 +36,7 @@ essays = "/essays/:slug/"
              Reluctantly powered by atomic badgers. \
              Contents licensed under \
              <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">\
-             <img src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" alt="CC-BY-SA" />\
+             <img src="https://licensebuttons.net/l/by-sa/4.0/80x15.png" alt="CC-BY-SA" />\
              </a> unless otherwise noted.\
            """
 
