Minify the production site

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ build:
   stage: build
   needs: []
   variables:
+    HUGO_FLAGS: --minify
     HUGO_BASEURL: https://www.taricorp.net/
 
 deploy:
