Try to finish up web1999
It's been long enough, I just need to finish this post and get it out
there. It turned out to be difficult to use w9bcc-web as a page
resource seemingly because Hugo wants to treat HTML files as content
rather than resources, so I stuffed it in assets/ instead where it's
guaranteed to be treated as a resource.

--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,9 @@ baseName = "feed"
   [markup.goldmark.renderer]
     unsafe = true
 
+[security]
+enableInlineShortcodes = true
+
 [permalinks]
 posts = "/:year/:slug/"
 projects = "/projects/:slug/"
